--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap");
+
 @import "./reset.scss";
+@import "./media.scss";
 
 .App {
-  text-align: center;
+  margin: 0 60px;
+  padding-top: 60px;
+  height: 100vh;
+  font-family: "Quicksand", sans-serif;
+  font-style: normal;
+  .highlighted {
+    background-color: yellow;
+    font-weight: bold;
+  }
 }
